[package]
name = "spl-associated-token-account"
version = "1.0.2"
description = "Safecoin Program Library Associated Token Account"
authors = ["Safecoin Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
safecoin-program = "1.6.16"
safe-token = { version = "3.1", path = "../../token/program", features = ["no-entrypoint"] }

[dev-dependencies]
safecoin-program-test = "1.6.16"
safecoin-sdk = "1.6.16"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
