[package]
name = "safe-associated-token-account"
version = "1.0.7"
description = "Safecoin Program Library Associated Token Account"
authors = ["Safecoin Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
safecoin-program = "1.6.19"
safe-token = { version = "^3.1.6", path = "../../token/program", features = ["no-entrypoint"] }

[dev-dependencies]
safecoin-program-test = "1.6.19"
safecoin-sdk = "1.6.20"

[lib]
name = "safe_associated_token_account"
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
