[package]
name = "spl-binary-oracle-pair"
version = "0.1.0"
description = "Safecoin Program Library Binary Oracle Pair"
authors = ["Safecoin Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
test-bpf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
safecoin-program = "1.6.16"
safe-token = { version = "3.1", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
uint = "0.8"
arbitrary = { version = "0.4", features = ["derive"], optional = true }
borsh = "0.9.1"

[dev-dependencies]
safecoin-program-test = "1.6.16"
safecoin-sdk = "1.6.16"

[lib]
crate-type = ["cdylib", "lib"]
