[package]
name = "safe-feature-proposal-cli"
version = "1.2.0"
description = "SPL Feature Proposal Command-line Utility"
authors = ["Safecoin Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
solana-clap-utils = "1.6.16"
solana-cli-config = "1.6.16"
solana-client = "1.6.16"
solana-logger = "1.6.16"
safecoin-sdk = "1.6.16"
safe-feature-proposal = { version = "1.0", path = "../program", features = ["no-entrypoint"] }

[[bin]]
name = "safe-feature-proposal"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
