[package]
name = "safe-feature-proposal"
version = "1.0.0"
description = "Safecoin Program Library Feature Proposal Program"
authors = ["Safecoin Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
safecoin-program = "1.6.18"
safe-token = { version = "3.1.3", path = "../../token/program", features = ["no-entrypoint"] }

[dev-dependencies]
safecoin-program-test = "1.6.18"
safecoin-sdk = "1.6.18"

[lib]
name = "spl_feature_proposal"
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
