[package]
name = "spl-memo"
version = "3.0.1"
description = "Solcoin Program Library Memo"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
safecoin-program = "1.7.7"

[dev-dependencies]
safecoin-program-test = "1.7.7"
solana-sdk = "1.7.7"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
