cargo-features = ["resolver"]

[package]
name = "safe-memo"
version = "3.0.4"
description = "Safecoin Program Library Memo"
authors = ["Safecoin Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"
resolver = "2"

[features]
no-entrypoint = []
test-bpf = []


[dependencies]
solana_program = { package = "safecoin-program", version = "1.6.19" }
zeroize = "=1.4.3"

[dev-dependencies]
safecoin-program-test = "1.6.19"
safecoin-sdk = "1.6.20"
zeroize = "=1.4.3"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
