[package]
name = "spl-name-service"
description = "Safecoin Program Library Name Service"
version = "0.1.0"
repository = "https://github.com/solana-labs/safecoin-program-library"
authors = ["lcchy <lucas@bonfida.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
safecoin-program = "1.6.18"
num-traits = "0.2"
borsh = "0.9.1"
num-derive = "0.3.3"
thiserror = "1.0.24"

[dev-dependencies]
safecoin-program-test = "1.6.18"
safecoin-sdk = "1.6.18"

[lib]
crate-type = ["cdylib", "lib"]
