[package]
name = "spl-record"
version = "0.1.0"
description = "Safecoin Program Library Record Program"
authors = ["Safecoin Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
safecoin-program = "1.6.18"
thiserror = "1.0"

[dev-dependencies]
safecoin-program-test = "1.6.18"
safecoin-sdk = "1.6.18"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
