[package]
name = "spl-shared-memory"
version = "2.0.6"
description = "Solana Program Library Shared-memory"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
test-bpf = []

[dependencies]
arrayref = "0.3.6"
safecoin-program = "=1.6.11"

[dev-dependencies]
safecoin-program-test = "=1.6.11"
solana-sdk = "=1.6.11"

[lib]
crate-type = ["cdylib", "lib"]
