[package]
name = "spl-shared-memory"
version = "2.0.6"
description = "Safecoin Program Library Shared-memory"
authors = ["Safecoin Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
test-bpf = []

[dependencies]
arrayref = "0.3.6"
safecoin-program = "=1.6.18"

[dev-dependencies]
safecoin-program-test = "=1.6.18"
safecoin-sdk = "=1.6.18"

[lib]
crate-type = ["cdylib", "lib"]
