[package]
authors = ["Safecoin Maintainers <maintainers@solana.foundation>"]
description = "SPL-Stake-Pool Command-line Utility"
edition = "2018"
homepage = "https://spl.solana.com/stake-pool"
license = "Apache-2.0"
name = "spl-stake-pool-cli"
repository = "https://github.com/solana-labs/safecoin-program-library"
version = "0.2.0"

[dependencies]
borsh = "0.9.1"
clap = "2.33.3"
serde_json = "1.0.62"
safecoin-account-decoder = "1.6.20"
safecoin-clap-utils = "1.6.19"
safecoin-cli-config = "1.6.18"
safecoin-client = "1.6.19"
safecoin-logger = "1.6.18"
safecoin-sdk = "1.6.20"
safecoin-program = "1.6.19"
safe-associated-token-account = { version = "1.0.7", path="../../associated-token-account/program", features = [ "no-entrypoint" ] }
spl-stake-pool = { version = "0.2", path="../program", features = [ "no-entrypoint" ] }
safe-token = { version = ">=3.1.6", path="../../token/program", features = [ "no-entrypoint" ]  }
bs58 = "0.4.0"
bincode = "1.3.1"
lazy_static = "1.4.0"

[[bin]]
name = "spl-stake-pool"
path = "src/main.rs"
