[package]
name = "spl-stake-pool"
version = "0.2.0"
description = "Safecoin Program Library Stake Pool"
authors = ["Safecoin Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
serde = "1.0.121"
serde_derive = "1.0.103"
safecoin-program = "1.6.18"
spl-math = { version = "0.1", path = "../../libraries/math", features = [ "no-entrypoint" ] }
safe-token = { version = "3.1", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
bincode = "1.3.1"

[dev-dependencies]
proptest = "0.10"
safecoin-program-test = "1.6.18"
safecoin-sdk = "1.6.18"
safecoin-vote-program = "1.6.18"

[lib]
crate-type = ["cdylib", "lib"]
