[package]
authors = ["Safecoin Maintainers <maintainers@solana.foundation>"]
description = "SPL-Token Command-line Utility"
edition = "2018"
homepage = "https://spl.solana.com/token"
license = "Apache-2.0"
name = "safe-token-cli"
repository = "https://github.com/solana-labs/safecoin-program-library"
version = "2.0.11"

[dependencies]
clap = "2.33.3"
console = "0.14.0"
serde_json = "1.0.62"
safecoin-account-decoder = "=1.6.20"
safecoin-clap-utils = ">=1.6.19"
safecoin-cli-config = ">=1.6.18"
safecoin-cli-output = "=1.6.20"
safecoin-client = ">=1.6.19"
safecoin-logger = "=1.9.29"
safecoin-remote-wallet = "=1.6.19"
safecoin-sdk = ">=1.6.20"
safe-token = { version = ">=3.1.7", path="../program", features = [ "no-entrypoint" ] }
safe-associated-token-account = { version = ">=1.0.7", path="../../associated-token-account/program", features = [ "no-entrypoint" ] }
safe-memo = { version = ">=3.0.4", path="../../memo/program", features = ["no-entrypoint"] }

[[bin]]
name = "safe-token"
path = "src/main.rs"
