[package]
name = "spl_token_id_perf_monitor"
version = "0.0.1"
description = "SPL Token performance monitor"
authors = ["Safecoin Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[dev-dependencies]
rand = { version = "0.7.0"}
safe-token = { path = "../program", features = [ "no-entrypoint" ] }
safecoin-runtime = "1.6.18"
safecoin-sdk = "1.6.18"
safecoin-bpf-loader-program = "1.6.18"
solana_rbpf = "0.2"

[workspace]
