[package]
name = "safe-token"
version = "3.1.7"
description = "Safecoin Program Library Token"
authors = ["Safecoin Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
safecoin-program = ">=1.6.19"
thiserror = "1.0"

[dev-dependencies]
safecoin-sdk = "1.6.20"

[lib]
name = "spl_token"
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
