[package]
name = "test-client"
version = "0.1.0"
authors = ["Safecoin Maintainers <maintainers@solana.foundation>"]
publish = false
edition = "2018"

# Used to ensure that SPL programs are buildable by external clients

[dependencies]
safecoin-sdk = "1.6.16"
spl-memo = { path = "../../memo/program", features = [ "no-entrypoint" ] }
safe-token = { path = "../../token/program", features = [ "no-entrypoint" ] }
safe-token-swap = { path = "../../token-swap/program", features = [ "no-entrypoint" ] }
