[package]
name = "spl-example-transfer-lamports"
version = "1.0.0"
description = "Safecoin Program Library Transfer Lamports Example"
authors = ["Safecoin Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
safecoin-program = "1.6.18"

[dev-dependencies]
safecoin-program-test = "1.6.18"
safecoin-sdk = "1.6.18"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
